remove old config options

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
     <link rel="shortcut icon" href="https://aws.amazon.com/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap">
 
-    <title>AWS S3 Explorer</title>
+    <title>S3 Directory Listing</title>
     
-    <script>
-        const S3_CONFIG = {
-            Region      : 'ap-southeast-2',
-            Bucket      : 'dl.benfleming.nz',
-            Prefix      : '',
-            Delimiter   : '/'
+    <script type="text/javascript">
+        const CONFIG = {
+            Region      : 'us-east-1',
+            Bucket      : '',
+            DateFormat  : 'MMM Do YYYY hh:mm:ss a ZZ'
         };
     </script>
+
 </head>
 <body>
     <table id="app">
