add blurb to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,33 @@
+<!-- 
+    © 2020 Ben Fleming
+
+    Author : Ben Fleming
+    Email  : ben@benfleming.nz
+    Github : https://github.com/benjamesfleming/s3-directory-listing
+
+    ----------
+    NOTES
+    ----------
+
+    Use as `index.html` file for a S3 bucket to get a nice directory
+    listing, of the public bucket.
+
+    The S3 bucket must be publicly listable. Follow the directions 
+    at `https://github.com/benjamesfleming/s3-directory-listing` to setup bucket.
+
+    ----------
+    CONFIG
+    ----------
+
+    To setup this file. Make sure that all the values in the `CONFIG` object (found below)
+    are correct.
+
+    CONFIG.Region     --- The region that your S3 bucket is located
+    CONFIG.Bucket     --- The DNS compliant bucket name
+    CONFIG.DateFormat --- The format of the `LastModified` date (SEE: https://momentjs.com/docs/#/displaying/)
+
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
